--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -99,7 +99,7 @@
     <div class="container" id="game-container">
       <h1>Credits:</h1>
       <p class="description">
-        <h3>Github <a href="https://github.com/Lucca2013">repo</a></h3><br>
+        <h3>Github <a href="https://github.com/Lucca2013/RedditDiviner-and-RedditPostAPI/">repo</a></h3><br>
         <h3>Website and API made by: <a href="https://github.com/Lucca2013">Lucca Felipetto</a></h3> <br/>
         <br />
       </p>
