chenge project structure

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         />
       </div>
       <p class="description">
-        <a href="/credits.php">Credits</a>
+        <a href="/credits">Credits</a>
       </p>
       <button class="play-button" id="play-btn">Play</button>
     </div>
@@ -116,7 +116,7 @@
       playBtn.addEventListener("click", () => {
         container.classList.add("move-up");
         setTimeout(() => {
-          window.location.href = "/game.php";
+          window.location.href = "/game";
         }, 850);
       });
     </script>
